App end 	new file:   my_meal/assets/images/dashboard_banner.png 	new file:   my_meal/assets/images/image_not_found.png 	deleted:    my_meal/assets/images/user.png 	new file:   my_meal/ios/Podfile.lock 	modified:   my_meal/ios/Runner.xcodeproj/project.pbxproj 	modified:   my_meal/ios/Runner.xcworkspace/contents.xcworkspacedata 	modified:   my_meal/lib/core/routes/app_routes.dart 	modified:   my_meal/lib/di.config.dart 	modified:   my_meal/lib/features/dashboard/data/datasources/dashboard_remote_datasource.dart 	modified:   my_meal/lib/features/dashboard/data/models/recipe_response.dart 	modified:   my_meal/lib/features/dashboard/data/models/recipe_response.freezed.dart 	modified:   my_meal/lib/features/dashboard/data/models/recipe_response.g.dart 	modified:   my_meal/lib/features/dashboard/data/repositories/dashboard_repository.dart 	new file:   my_meal/lib/features/dashboard/presentation/cubit/recipe_cubit.dart 	new file:   my_meal/lib/features/dashboard/presentation/cubit/recipe_cubit.freezed.dart 	new file:   my_meal/lib/features/dashboard/presentation/cubit/recipe_state.dart 	new file:   my_meal/lib/features/dashboard/presentation/cubit/recipes_cubit.dart 	new file:   my_meal/lib/features/dashboard/presentation/cubit/recipes_cubit.freezed.dart 	new file:   my_meal/lib/features/dashboard/presentation/cubit/recipes_state.dart 	new file:   my_meal/lib/features/dashboard/presentation/cubit/tags_cubit.dart 	new file:   my_meal/lib/features/dashboard/presentation/cubit/tags_cubit.freezed.dart 	new file:   my_meal/lib/features/dashboard/presentation/cubit/tags_state.dart 	modified:   my_meal/lib/features/dashboard/presentation/dashboard_screen.dart 	new file:   my_meal/lib/features/dashboard/presentation/widgets/dashboard_banner.dart 	new file:   my_meal/lib/features/dashboard/presentation/widgets/dashboard_product_card.dart 	new file:   my_meal/lib/features/dashboard/presentation/widgets/dashboard_product_list.dart 	deleted:    my_meal/lib/features/dashboard/presentati

--- a/my_meal/pubspec.yaml
+++ b/my_meal/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   icons_plus: ^5.0.0
   flutter_svg: ^2.0.10+1
   sidebarx: ^0.17.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
